# new_file_notification

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.env  docker-compose.yml  environ-3.8.yml  file_notification.py  get_file_notif.py  pyproject.toml  runConsumer  runProducer
new_file_notification/: file_notification.py  get_file_notif.py
